about-complete, index-start

--- a/Whitesquare/index.html
+++ b/Whitesquare/index.html
@@ -39,8 +39,20 @@
         </ul>
     </nav>
     <div id="heading"></div>
-    <aside></aside>
-    <section>1</section>
+    <section>
+        <div class="slider">
+            <div class="slider__body">
+                <div class="slider__title">Fusce vitae nibh quis diam fermentum</div>
+                <div class="slider__text">Etiam adipiscing ultricies commodo.</div>
+            </div>
+            <div class="slider__nav">
+                <p class="slider__nav__actvive"><span class="slider__nav__num">1</span>Lorem Ipsum Dolop</p>
+                <p><span class="slider__nav__num">2</span>Ultricies Pellentesque</p>
+                <p><span class="slider__nav__num">3</span>Aliquam ipsum</p>
+                <p><span class="slider__nav__num">4</span>Nullam sed mauris ut</p>
+            </div>
+        </div>
+    </section>
 </div>
 <footer></footer>
 </body>
