--- a/Whitesquare/index.html
+++ b/Whitesquare/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>Whitesquare</title>
+    <title>Whitesquare - Главная</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300" type="text/css">
     <!--[if lt IE 9]>
@@ -33,7 +33,7 @@
             <li><a href="/services/">Услуги</a></li>
             <li><a href="/partners/">Партнёры</a></li>
             <li><a href="/customers/">Клиенты</a></li>
-            <li><a href="/projects/">Проекты</a></li>
+            <li><a href="projects.html">Проекты</a></li>
             <li><a href="/careers/">Вакансии</a></li>
             <li><a href="/contact/">Контакты</a></li>
         </ul>
