--- a/Whitesquare/projects.html
+++ b/Whitesquare/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>Whitesquare - о компании</title>
+    <title>Whitesquare - наши проекты</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300" type="text/css">
     <!--[if lt IE 9]>
@@ -29,17 +29,17 @@
     <nav>
         <ul class="top-menu">
             <li><a href="index.html">Главная</a></li>
-            <li class="active">О компании</li>
+            <li><a href="about.html">О компании</a></li>
             <li><a href="/services/">Услуги</a></li>
             <li><a href="/partners/">Партнёры</a></li>
             <li><a href="/customers/">Клиенты</a></li>
-            <li><a href="projects.html">Проекты</a></li>
+            <li class="active">Проекты</li>
             <li><a href="/careers/">Вакансии</a></li>
             <li><a href="/contact/">Контакты</a></li>
         </ul>
     </nav>
     <div id="heading">
-        <h1>О компании</h1>
+        <h1>наши проекты</h1>
     </div>
     <aside>
         <nav>
@@ -55,22 +55,32 @@
         <h2>Наши офисы</h2>
         <p><img src="images/sample.png" width="230" height="180" alt="Our offices"></p>
     </aside>
-    <section>
-        <blockquote>
-            <p>
-                “А сегодня в завтрашний день не все могут смотреть. Вернее, смотреть могут не только лишь все. Мало, кто может это делать.”
-            </p>
-            <cite>Великий Гений</cite>
-        </blockquote>
-        <p>Первый абзац какого-то текста...типа да.. вот</p>
-        <p>Второй абзац какого-то текста...типа да.. вот</p>
-        <p>Третий абзац какого-то текста...типа да.. вот</p>
-        <figure>
-            <img src="images/sample.png" width="320" height="180" alt="">
-        </figure>
-        <figure>
-            <img src="images/sample.png" width="320" height="180" alt="">
-        </figure>
+    <section class="projects">
+        <h2>Lorem ipsum submenu 2</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non neque ac sem accumsan rhoncus ut ut turpis. In hac habitasse platea dictumst. Proin eget nisi erat, et feugiat arcu. Duis semper porttitor lectus, ac pharetra erat imperdiet nec. Morbi interdum felis nulla. Aenean eros orci, pellentesque sed egestas vitae, auctor aliquam nisi. Nulla nec libero eget sem rutrum iaculis. Quisque in enim velit, at dignissim est. Nulla ullamcorper, dolor ac pellentesque placerat, justo tellus gravida erat, vel porttitor libero erat condimentum metus. Donec sodales aliquam orci id suscipit. Proin sed risus sit amet massa ultrices laoreet quis a erat. Aliquam et metus id erat vulputate egestas. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <div class="projects">
+            <figure>
+                <img src="images/sample.png" width="320" height="180" alt="">
+                <figcaption>screenshot 1</figcaption>
+            </figure>
+            <figure>
+                <img src="images/sample.png" width="320" height="180" alt="">
+                <figcaption>screenshot 2</figcaption>
+            </figure>
+        </div>
+        <div class="projects">
+            <figure>
+                <img src="images/sample.png" width="320" height="180" alt="">
+                <figcaption>screenshot 3</figcaption>
+            </figure>
+            <figure>
+                <img src="images/sample.png" width="320" height="180" alt="">
+                <figcaption>screenshot 4</figcaption>
+            </figure>
+        </div>
+        <h2>technology</h2>
+        <p>Donec vel orci purus, ut ornare orci. Aenean rutrum pellentesque quam. Quisque gravida adipiscing augue, eget commodo augue egestas varius. Integer volutpat, tellus porta tincidunt sodales, lacus est tempus odio, fringilla blandit tortor lectus ut sem. Pellentesque nec sem lacus, sit amet consequat neque. Etiam varius urna quis arcu cursus in consectetur dui tincidunt. Quisque arcu orci, lacinia eget pretium vel, iaculis pellentesque nibh. Etiam cursus lacus eget neque viverra vestibulum. Aliquam erat volutpat. Duis pulvinar tellus ut urna facilisis mollis. Maecenas ac pharetra dui. Pellentesque neque ante, luctus eget congue eget, rhoncus vel mauris. Duis nisi magna, aliquet a convallis non, venenatis at nisl. Nunc at quam eu magna malesuada dignissim. Duis bibendum iaculis felis, eu venenatis risus sodales non. In ligula mi, faucibus eu tristique sed, vulputate rutrum dolor.</p>
+        <h2>Related projects</h2>
         <h2>Наша команда</h2>
         <div class="team-row">
             <figure>
